--- a/indexAlumno.html
+++ b/indexAlumno.html
@@ -19,6 +19,11 @@
     <section id="tipos">
         <h2>Tipos de Chocolate</h2>
         <p>Existen diferentes tipos de chocolate, como el chocolate negro, blanco y con leche...</p>
+        <ol>
+            <b><li>Chocolate Negro</li>
+            <li>Chocolate con Leche</li>
+            <li>Chocolate Blanco</li></b>
+        </ol>
     </section>
 
     <section id="historia">
